@startuml
title VOPC - UC-02 future editor (MVP uses fixture C1)

left to right direction
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
hide empty members

package "Boundary/UI" {
  class "Web UI" as WebUI <<boundary>> {
    -selectedEnvironment: String
    -configurationDraft: ConfigurationDefinitionDraft
    +showConfigurationRequirements()
    +showValidResourceOutputs()
    +showValidWorkloadOutputs()
  }
  class "Environment Configuration API / Controller" as API <<control>> {
    -configurationService: ConfigurationService
    +selectEnvironment(applicationId, environment)
    +setDirectConfigurationValue(configurationDraft, item, valueOrOpaqueReference)
    +requestResourceOutputs(resource)
    +requestWorkloadOutputs(workload)
    +bindResourceOutput(configurationDraft, item, resource, output)
    +bindWorkloadOutput(configurationDraft, variable, workload, output)
    +stageSecret(applicationId, environment, secretDefinitionId, secretValue, idempotencyKey)
    +saveEnvironmentConfiguration(configurationDraft)
  }
}

package "Application services" {
  class "Environment Configuration Service" as ConfigurationService <<control>> {
    +selectEnvironment(applicationId, environment)
    +setDirectConfigurationValue(configurationDraft, item, valueOrOpaqueReference)
    +requestResourceOutputs(resource)
    +requestWorkloadOutputs(workload)
    +bindResourceOutput(configurationDraft, item, resource, output)
    +bindWorkloadOutput(configurationDraft, variable, workload, output)
    +stageSecret(applicationId, environment, secretDefinitionId, secretValue, idempotencyKey)
    +saveEnvironmentConfiguration(configurationDraft)
  }
}

package "Domain components" {
  class "Resource Output Catalog / Resource Definition Query" as ResourceCatalog <<control>> {
    -resourceDefinitions: List
    +listValidOutputs(resource)
    +listValidSensitiveOutputs(resource)
  }
  class "Workload Output Catalog" as WorkloadCatalog <<control>> {
    -workloadDefinitions: List
    +listValidPlanTimeOutputs(workload)
  }
  class "Environment Configuration Validator" as Validator <<control>> {
    -validationRules: List
    +validateEnvironmentConfiguration(configurationDraft)
  }
}

package "Integration abstractions" {
  interface "Secret Store / Secret Management Adapter" as SecretStore <<interface>> {
    -secretNamespace: String
    +stageSecret(applicationId, environment, secretDefinitionId, secretValue, ttl, idempotencyKey)
    +promoteStagedSecrets(stagedReferences)
    +revokeStagedSecrets(stagedReferences)
  }
}

package "Persistence" {
  class "Application Query / Application Repository" as AppQuery <<entity>> {
    -applicationDefinitions: Collection
    +loadConfigurationRequirements(applicationId)
  }
  class "Environment Configuration Repository" as ConfigRepo <<entity>> {
    -environmentConfigurations: Collection
    +save(configurationWithValueReferences)
    +findByApplicationAndEnvironment(applicationId, environment)
  }
}

WebUI "1" --> "1" API
API "1" --> "1" ConfigurationService
ConfigurationService "1" --> "1" AppQuery
ConfigurationService ..> ResourceCatalog
ConfigurationService ..> WorkloadCatalog
ConfigurationService ..> Validator
ConfigurationService ..> SecretStore
ConfigurationService "1" --> "1" ConfigRepo

note right of SecretStore
  Returns opaque idempotent references. Staging TTL plus
  promote/revoke compensation bounds cross-system failures.
end note

note right of ConfigurationService
  Stateless across requests; every mutation consumes and returns
  the complete Web-UI-owned draft. It never returns secret plaintext.
end note

@enduml
